# metricrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/benches/: instrument.rs
crates/metrics/src/: derive.rs  global.rs  lib.rs  registry.rs
crates/metrics/tests/: derive.rs
crates/protobuf/: Cargo.toml  build.rs
crates/protobuf/benches/: instrument.rs
crates/protobuf/examples/: self_metrics.rs
crates/protobuf/src/: fetch.rs  lib.rs  registry.rs
crates/protobuf/src/protos/: memory.proto  mod.rs
