[package]
description = "proc-macros for crate `metricrs`"
documentation = "https://docs.rs/metricrs"
edition = "2024"
license = "MIT"
name = "metricrs-derive"
repository = "https://github.com/ZeroRtt/metricrs/crates/metrics/derive"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106" , features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
