[package]
description = "A simple metric collector implementation compatible with the `metrics` facade."
documentation = "https://docs.rs/metricrs-protobuf"
edition = "2024"
license = "MIT"
name = "metricrs-protobuf"
repository = "https://github.com/ZeroRtt/metricrs/crates/protobuf"
version = "0.1.0"

[dependencies]
parking_lot = { version = "0.12.4" }
protobuf = { version = "3.7.2"}
metricrs = { path = "../metrics", version = "^0.1"}
log = { version = "^0.4" }

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"


[features]
default = ["registry","fetch"]
registry = []
fetch = []
