[package]
description = "A simple metric collector implementation compatible with the `metrics` facade."
documentation = "https://docs.rs/metricrs-protobuf"
edition = "2024"
license = "MIT"
name = "metricrs-protobuf"
repository = "https://github.com/ZeroRtt/metricrs/crates/protobuf"
version.workspace = true

[dependencies]
parking_lot = { version = "0.12.4" }
protobuf = { version = "3.7.2"}
metricrs = { path = "../metrics", version = "^0.1", default-features = false }
log = { version = "^0.4" }

[dev-dependencies]
metricrs = { path = "../metrics", version = "^0.1", features = ["derive"] }
pretty_env_logger = "0.5.0"
divan = "0.1.21"

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"


[features]
default = ["registry","fetch"]
registry = []
fetch = []


[[bench]]
name = "instrument"
harness = false
